<resources>
    <string name="app_name">My Application</string>
    <string name="testing">testing</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="register">Ainda não é cadastrado? Cadastre-se!</string>
    <string name="forgot_password">Esqueceu sua senha?</string>
    <string name="help">help</string>
</resources>