<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#08AD7F"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="128dp"
        android:background="#fff"
        android:hint="@string/email"
        android:padding="8dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/edit_email"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:background="#fff"
        android:hint="@string/password"
        android:padding="8dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/edit_password"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="15dp"
        android:background="#DADADA"
        android:text="@string/login"
        android:textColor="#08AD7F"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_login"
        android:layout_marginTop="32dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/image_help"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_help"
            android:contentDescription="@string/help" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="1dp"
            android:text="@string/forgot_password"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>